# rusty-puzzle-cube

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  pages.yml  rust-build.yml  rust-ci.yml  rust-coverage-ci.yml  rust-coverage.yml  web-build.yml  web-ci.yml
puzzle-cube/: Cargo.toml
puzzle-cube-ui/: Cargo.toml
puzzle-cube-ui/src/: bin.rs  colours.rs  demo.rs  gui.rs  lib.rs  main.rs  transforms.rs
puzzle-cube-ui/src/cube_ext/: instances.rs  mod.rs
puzzle-cube-ui/src/gui/: anim_cube.rs  colours.rs  cube_3d_ext.rs  cube_ext.rs  decided_move.rs  defaults.rs  file_io.rs  gui_state.rs  mod.rs  mouse_control.rs  side_panel.rs  transforms.rs
puzzle-cube-ui/src/gui/cube_ext/: mod.rs
puzzle-cube/benches/: README.md  cube_rotations.rs
puzzle-cube/src/: anticlockwise.rs  clockwise.rs  cube.rs  known_transforms.rs  lib.rs  notation.rs  quickcheck.rs
puzzle-cube/src/cube/: apply_rotation.rs  create_side.rs  cube_slice.rs  cubie_face.rs  direction.rs  face.rs  flat_side.rs  helpers.rs  macros.rs  mod.rs  rotation.rs  side_lengths.rs  test_helpers.rs
puzzle-cube/src/known_transforms/: mod.rs
puzzle-cube/src/notation/: mod.rs
res/: default-3x3-cube-debug-output.txt
src/: known_transforms_3x3.rs  main.rs
src/cube/: cubie_colour.rs  cubie_face.rs  face.rs  helpers.rs  macros.rs  mod.rs
src/known_transforms/: mod.rs
src/notation/: mod.rs
web/: index.html  index.js  package-lock.json  package.json  webpack.config.js
