[package]
name = "rusty-puzzle-cube-ui"
version = "0.1.5"
edition = "2021"
authors = ["Mike Croall"]

[dependencies]
anyhow = "1.0.95"
rusty-puzzle-cube = { path = "../puzzle-cube" }
three-d = { version = "0.18.1", features = ["egui-gui"] }
three-d-asset = { version = "0.9.2", features = ["png"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "rusty_puzzle_cube"
path = "./src/lib.rs"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4.25"
tracing = { version = "0.1.41", features = ["log"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

[lints.clippy]
allow_attributes = "deny"
