[package]
name = "rusty-puzzle-cube-ui"
version = "0.4.3"
edition = "2024"
authors = ["Mike Croall"]

[dependencies]
anyhow = "1.0.100"
circular-buffer = "1.2.0"
rusty-puzzle-cube = { path = "../puzzle-cube" }
strum = "0.27.2"
three-d = { version = "0.18.2", features = ["egui-gui"] }
three-d-asset = { version = "0.9.2", features = ["png"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "rusty_puzzle_cube"
path = "./src/lib.rs"
test = false               # avoid double-running all UI tests

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4.29"
tracing = { version = "0.1.44", features = ["log"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

[lints.clippy]
allow_attributes = "deny"
