[package]
name = "rusty-puzzle-cube-ui"
version = "0.4.4"
edition = "2024"
authors = ["Mike Croall"]

[dependencies]
anyhow.workspace = true
circular-buffer.workspace = true
rusty-puzzle-cube.workspace = true
strum.workspace = true
three-d = { workspace = true, features = ["egui-gui"] }
three-d-asset = { workspace = true, features = ["png"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "rusty_puzzle_cube"
path = "./src/bin.rs"
test = false               # avoid double-running all UI tests

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
tracing = { workspace = true, features = ["log"] }
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true

[lints.clippy]
allow_attributes = "deny"
