[package]
name = "rusty-puzzle-cube"
version = "0.10.2"
edition = "2024"
authors = ["Mike Croall"]
rust-version = "1.93.0"

[dependencies]
anyhow = "1.0.100"
colored = "3.1.1"
itertools = "0.14.0"
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
paste = "1.0.15"
pretty_assertions = "1.4.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

[lints.clippy]
allow_attributes = "deny"

[[bench]]
name = "cube_rotations"
harness = false
