[package]
name = "rusty-puzzle-cube"
version = "0.10.5"
edition = "2024"
authors = ["Mike Croall"]

[dependencies]
anyhow.workspace = true
colored.workspace = true
itertools.workspace = true
rand.workspace = true
strum = { workspace = true, features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
pastey.workspace = true
pretty_assertions.workspace = true
quickcheck_macros.workspace = true
quickcheck.workspace = true

[lints.clippy]
allow_attributes = "deny"

[[bench]]
name = "cube_rotations"
harness = false
